// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart - Warning expect to match snapshop on desktop 1`] = `
<div>
  <div
    class="MuiBox-root css-jhm0j8"
    data-testid="checkout-warning-message"
  >
    <svg
      class="MuiBox-root css-1k8admq"
      sx="[object Object]"
    >
      warning.svg
    </svg>
    <div
      class="MuiBox-root css-on40yh"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-40zv4g-MuiTypography-root"
      >
        You have more than 200 items in your cart! It may take a minute to finish checking out.
      </p>
    </div>
  </div>
</div>
`;

exports[`Cart - Warning expect to match snapshop on mobile 1`] = `
<div>
  <div
    class="MuiBox-root css-jhm0j8"
    data-testid="checkout-warning-message"
  >
    <svg
      class="MuiBox-root css-1k8admq"
      sx="[object Object]"
    >
      warning.svg
    </svg>
    <div
      class="MuiBox-root css-on40yh"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-pu2qy7-MuiTypography-root"
      >
        You have more than 200 items in your cart! It may take a minute to finish checking out.
      </p>
    </div>
  </div>
</div>
`;
